Fix alignment of header

--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -13,7 +13,8 @@
   background-position: center center;
   background-repeat: no-repeat;
   margin:auto;
-  padding:0;
+  margin-left: -12px; // to offset padding of parent container
+  padding: 0;
 }
 
 #logo{
